# mecanum_mpc_controller

./: CMakeLists.txt  README.md  autoware.launch.xml  package.xml
include/: mpc.hpp
launch/: mpc_launch.xml
param/: mecanum_car.yaml
src/: mcp_code.cpp  mpc.cpp  mpc_code.cpp
