<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_mpc_controller</name>
  <version>1.0.0</version>
  <description>MPC controller for mecanum wheel robot using std_msgs</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <!-- 仅保留核心消息依赖：std_msgs + autoware_auto_control/planning_msgs -->
  <depend>autoware_control_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>std_msgs</depend>
  <!-- 以下为代码实际用到的必要基础依赖，不可删除 -->
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>osqp_interface</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>
  <exec_depend>ros2topic</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>